# sde-sim-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  Release Crates.yml  Release PyPi.yml  Run test.yml
examples/: example.py  example.rs  example_gbm.py
python/sde_sim_rs/: __init__.pyi  example.py  example_gbm.py  sde_simulators.pyi
python/sde_simulators/: __init__.py  example.py
src/: filtration.rs  func.rs  lib.rs  main.rs  py_binding.rs  rng.rs  sim.rs
src/proc/: increment.rs  mod.rs  util.rs
src/process/: increment.rs  ito.rs  levy.rs  mod.rs  util.rs
src/rng/: mod.rs  pseudo.rs  sobol.rs
src/sim/: euler.rs  mod.rs  runge_kutta.rs
