[package]
name = "sde-simulators"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sde_simulators"
crate-type = ["cdylib"]

[dependencies]
evalexpr = "12.0.2"
meval = "0.2.0"
mlua = { version = "0.10.5", features = ["luajit"] }
ndarray = "0.16.1"
once_cell = "1.21.3"
plotly = "0.12.1"
polars = "0.49.1"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-polars = "0.22.0"
rand = { version = "0.8.5", features = ["std"] } # this version required for compatibility with statrs
regex = "1.11.1"
statrs = "0.18.0"
