[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "sde-sim-rs"
dynamic = ["version"]
description = "Powerful and flexible SDE simulation library with Rust-accelerated Monte-Carlo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
    {name = "Alexander Schierbeck-Hansen", email = "aschii85@protonmail.com"},
]
# Metadata that helps PyPI users find your library
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "polars>=1.8.2",
    "numpy>=1.24.4",
    "plotly>=6.6.0",
]

[tool.maturin]
# Use 'python' feature to trigger the abi3 and extension-module logic we set in Cargo.toml
features = ["python"]
python-source = "python"
module-name = "sde_sim_rs.sde_sim_rs" # Defines Rust as a submodule
# Maturin automatically includes .pyi and py.typed if they are in the python-source
include = ["python/sde_sim_rs/py.typed"]

[tool.uv]
# 2026 UV Power-move: Automatically rebuild the Rust code when .rs files change
cache-keys = [
    { file = "Cargo.toml" },
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" }
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.7",
    "maturin>=1.9.0",
]
